--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,6 @@
 	<classpathentry kind="lib" path="lib/commons-lang3-3.8.1/commons-lang3-3.8.1-test-sources.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.8.1/commons-lang3-3.8.1-tests.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.8.1/commons-lang3-3.8.1.jar"/>
+	<classpathentry kind="lib" path="lib/gson-2.8.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
